unpackaged/objects/copado__User_Story_Task__c.object
<CustomObject>
	<fields>
		<fullName>copado__Comments__c</fullName>
		<label>Comments</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Hours_Remaining__c</fullName>
		<label>Hours Remaining</label>
		<precision>4</precision>
		<scale>1</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Not Started</fullName>
					<default>true</default>
					<label>Not Started</label>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Completed</fullName>
				</value>
				<value>
					<fullName>Waiting on someone else</fullName>
				</value>
				<value>
					<fullName>Deferred</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Subject__c</fullName>
		<label>Subject</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>User Story Tasks</relationshipLabel>
		<relationshipName>User_Story_Tasks</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Connect_log__c</fullName>
		<label>Connect log</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_ID__c</fullName>
		<externalId>true</externalId>
		<label>External ID</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copadoconnect__Last_Synced_Date__c</fullName>
		<label>Last Synced Date</label>
		<type>DateTime</type>
	</fields>
	<label>User Story Task</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Subject__c</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__User_Story__c</columns>
		<columns>copado__Comments__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>UST-{0000000}</displayFormat>
		<label>User Story Task Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>User Story Tasks</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>